Commit site casi en funcionamiento total

--- a/WebSite/Includes/header.html
+++ b/WebSite/Includes/header.html
@@ -12,12 +12,12 @@
     <!-- Header -->
     <header class="container-body-head">
         <div class="titulo-con-logo">
-            <a href="/WebSite/index.php"><h1>FlightAir</h1></a>
+            <a href="../WebSite/index.php"><h1>FlightAir</h1></a>
         </div>
 
         <div class="contenedor-user">
             <nav class="boton-opciones" id="menu-options">
-                <button id="boton-inicio" onclick="window.location.href='index.php'">Aerolínea</button>
+                <button id="boton-inicio" onclick="window.location.href='../WebSite/index.php'">Aerolínea</button>
                 
                 <div id="boton-destino">
                     <button type="button">Aviones</button>
