--- a/WebSite/Includes/Style/header.css
+++ b/WebSite/Includes/Style/header.css
@@ -40,16 +40,17 @@
 }
 
 /* ENLACES */
-a {
-    text-decoration: none;
+a{
     color: #2980b9;
-    font-weight: 500;
-    transition: color 0.2s;
+    text-decoration: none;
+    font-weight: 600;
+    transition: color 0.2s, text-decoration 0.2s;
+    
 }
 
 a:hover {
     color: #1c5d8c;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 /* MENÚ */
@@ -62,6 +63,7 @@ a:hover {
 
 /* BOTONES DE OPCIONES */
 .boton-opciones {
+    margin-top: 100px;
     display: flex;
     margin: 0;
     padding: 0;
@@ -92,6 +94,7 @@ a:hover {
 
 /* SUBMENÚ PARA AVIONES */
 /* SUBMENÚ PARA AVIONES Y OTROS MENÚS */
+#boton-aerolineas,
 #boton-destino,
 #boton-curso,
 #boton-examen,
@@ -101,6 +104,7 @@ a:hover {
 }
 
 /* Mostrar submenús al hacer hover en cualquier botón de menú */
+#boton-aerolineas:hover .submenu,
 #boton-destino:hover .submenu,
 #boton-curso:hover .submenu,
 #boton-examen:hover .submenu,
