--- a/WebSite/Includes/header.html
+++ b/WebSite/Includes/header.html
@@ -37,7 +37,8 @@
                         <a href="/Airplane/airbus.php">Airbus</a>
                         <a href="/Airplane/boing.php">Boeing</a>
                         <a href="/Airplane/embraer.php">Embraer</a>
-                        <a href="/Airplane/otrosAviones.php">Otros Modelos</a>
+                        <a href="/Airplane/bombardier.php">Bombardier</a>
+                        <a href="/Airplane/otrosAviones.php">Otros</a>
                     </div>
                 </div>
                 
